--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,9 @@
     <title>Prueba Git</title>
 </head>
 <body>
-    <p>Esta es una prueba de GIT</p>
+    <div style="background-color:#f0f0f0;">
+        <h1>Este es el titulo del documento</h1>
+        <p>Esta es una prueba de GIT</p>
+    </div>
 </body>
 </html>
